--- a/estilo/style.css
+++ b/estilo/style.css
@@ -24,8 +24,8 @@ border-radius: 3px;
 padding: 4px;
 }
 main{
-    max-width: 800px;
-    min-width: 280px;
+    max-width: 800;
+    min-width: 280;
 }
 img{
     text-align: right;
@@ -42,7 +42,7 @@ div{
      height: 200px;
     text-align: center;
     display: inline-block;
-    min-width: 240px;
+    min-width: 200;
 }
 footer{
     background-color: #151112;
