--- a/estilo/style.css
+++ b/estilo/style.css
@@ -1,7 +1,11 @@
 @charset "utf-8";
+body{
+    background-image: url(../imagem/canaveral-background.5dbf8d8ea7288ff1d7f1055cead80d9f.png);
+   background-attachment: fixed;
+}
 article{
 background-color: #151112;
-margin: 10px;
+margin: 20px;
 border-width: 3px;
 border-color: white;
 border-style: solid;
